# tda-multiscale-point-cloud-geometry

./: .gitmodules  README.md  build_and_install.sh  display_dice.pvsm  run.sh
data/: dice.ply  dice.vtu  screw.ply
src/: CMakeLists.txt  CMakePresets.json  README.md  display.pvsm  display.py
src/CMake/: config.cmake
src/core/base/abstractTriangulation/: AbstractTriangulation.h
src/core/base/approximateTopology/: old_code.h
src/core/base/bottleneckDistance/: BottleneckDistance.cpp
src/core/base/connectedComponents/: ConnectedComponents.h
src/core/base/dimensionReduction/: DimensionReduction.cpp
src/core/base/discreteMorseSandwich/: DiscreteMorseSandwich.cpp  DiscreteMorseSandwich.h
src/core/base/explicitTriangulation/: ExplicitTriangulation.cpp  ExplicitTriangulation.h
src/core/base/ftmTree/: FTMTreeUtils.cpp
src/core/base/imageTo2DPointCloud/: CMakeLists.txt  ImageTo2DPointCloud.cpp  ImageTo2DPointCloud.h
src/core/base/pCAnalysis/: CMakeLists.txt  Fit.h  PCAnalysis.cpp  PCAnalysis.h  PCAnalysisUtils.h  PoissonDiskSampling.cpp  PoissonDiskSampling.h  RIMLS.cpp  RIMLS.h  RIMLSWeightFunc.h  RIMLSWeightFunc.hpp  Sampling.h
src/core/base/persistenceDiagram/: PersistenceDiagram.cpp  PersistenceDiagram.h  PersistenceDiagramUtils.h
src/core/base/persistenceDiagramAuction/: PersistenceDiagramAuction.cpp
src/core/base/persistenceDiagramClustering/: PDClustering.cpp  PDClustering.h  PDClusteringImpl_keanu.h  PersistenceDiagramClustering.cpp  PersistenceDiagramClustering.h
src/core/base/planarGraphLayout/: MergeTreeVisualization.h
src/core/base/pointCloudNoiser/: CMakeLists.txt  PointCloudNoiser.cpp  PointCloudNoiser.h
src/core/base/ripsComplex/: RipsComplex.cpp  RipsComplex.h
src/core/base/ripsMultiParameterSampling/: CMakeLists.txt  RipsMultiParameterSampling.cpp  RipsMultiParameterSampling.h
src/core/base/ripsPersistence/: CMakeLists.txt  (+2 more)
src/core/base/ripsTree/: CMakeLists.txt  RipsTree.cpp  RipsTree.h
src/standalone/: CMakeLists.txt
src/standalone/RipsMultiParameterSampling/: CMakeLists.txt  main.cpp
(+32 files in other folders)
